--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -2,65 +2,60 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{>meta}}
     <title>Login</title>
-    <link rel="stylesheet" href="./asset/css/index.css">
+    {{>fontAwesome}}
+    {{>style}}
 </head>
 
 <body>
     <main>
         {{>nav}}
-        <div class="container container-form">
-            <div class="content content-form">
-                <div class="content-header content-header-form">
-                    <h2 class="content-header-h2">
-                        Log-In
-                    </h2>
-                    <p class="content-header-description">
-                        Let's Login into Your Account.
-                    </p>
-                </div>
-                <!-- <div class="content-panel">
-                <div class="content-panel-account active">
-                    <span>Client</span>
-                </div>
-                <div class="content-panel-personal">
-                    <span>Employee</span>
-                </div>
-            </div> -->
-                <div class="content-sign-in-form">
-                    <form action="/user/sign-in" method="post">
-                        <div class="content-form-message">
-                            <p class="form-message-description">{{description}}</p>
+        <div class="container container-join-us">
+            <div class="content  content-join-us">
+                <div class="content-client-join-us">
+                    <div class="client-header">
+                        <div class="img">
+                            <img src="/asset/image/vehicle_driving.png" alt="Be Our Customer Image">
                         </div>
-                        <div class="content-form">
-                            <div class="content-form-email">
-                                <input type="email" name="email" id="form-email" class="form-email" required>
-                                <span class="form-field-label">Email</span>
-                            </div>
-                            <div class="content-form-password">
-                                <input type="password" name="password" id="form-pass-original"
-                                    class="form-pass-original" required>
-                                <span class="form-field-label">Password</span>
-                            </div>
+                        <div class="title">
+                            <h2 class="title">User Login</h2>
                         </div>
-                        <div class="content-submit-button">
-                            <div class="content-submit-btn">
-                                <input type="submit" value="Login" class="submit-btn">
-                            </div>
-                            <div class="content-go-to-sign-up">
-                                <p class="go-to-sign-up-description">Not Having An Account? <a href="/signup"
-                                        class="go-to-sign-up-page-btn">Sign-Up</a></p>
-                            </div>
+                    </div>
+                    <div class="client-btn">
+                        <a href="/sign-in-client" class="client-link">Client Sign-in</a>
+                    </div>
+                    <div class="client-description">
+                        <p class="description">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas similique possimus
+                            consectetur quasi facere praesentium. Veniam maxime, recusandae quidem blanditiis
+                            doloremque, perferendis pariatur praesentium dolorem commodi ullam eum, modi quo.
+                        </p>
+                    </div>
+                </div>
+                <div class="content-employee-join-us">
+                    <div class="employee-header">
+                        <div class="img">
+                            <img src="/asset/image/vehicle_repair.png" alt="Work For Us Image">
                         </div>
-                    </form>
+                        <div class="title">
+                            <h2 class="title">Employee Login</h2>
+                        </div>
+                    </div>
+                    <div class="employee-btn">
+                        <a href="/sign-in-employee" class="employee-link">Employee Sign-in</a>
+                    </div>
+                    <div class="employee-description">
+                        <p class="description">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas similique possimus
+                            consectetur quasi facere praesentium. Veniam maxime, recusandae quidem blanditiis
+                            doloremque, perferendis pariatur praesentium dolorem commodi ullam eum, modi quo.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-
 </body>
-
+{{>script}}
 </html>
