--- a/templates/views/repairYourVehicle.hbs
+++ b/templates/views/repairYourVehicle.hbs
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule</title>
-    <link rel="stylesheet" href="/asset/css/index.css">
+    {{>meta}}
+    <title>vehicle servicing</title>
+    {{>fontAwesome}}
+    {{>style}}
 </head>
 
 <body>
@@ -59,5 +58,5 @@
     </main>
 
 </body>
-
+{{>script}}
 </html>
