update before presentation

--- a/templates/views/ourService.hbs
+++ b/templates/views/ourService.hbs
@@ -3,7 +3,7 @@
 
 <head>
     {{>meta}}
-    <title>our client</title>
+    <title>Service Status</title>
     {{>fontAwesome}}
     {{>style}}
     {{>map}}
@@ -42,6 +42,22 @@
                                 <div class="servicing-email">
                                     <div class="label-servicing">Email</div>
                                     <div class="value-servicing">{{email}}</div>
+                                </div>
+                                <div class="servicing-client-name">
+                                    <div class="label-servicing">Employee Name</div>
+                                    <div class="value-servicing">{{employeeName}}</div>
+                                </div>
+                                <div class="servicing-phone">
+                                    <div class="label-servicing">Employee Phone</div>
+                                    <div class="value-servicing">{{employeePhone}}</div>
+                                </div>
+                                <div class="servicing-email">
+                                    <div class="label-servicing">Employee Email</div>
+                                    <div class="value-servicing">{{employeeEmail}}</div>
+                                </div>
+                                <div class="servicing-garage">
+                                    <div class="label-servicing">Garage Name</div>
+                                    <div class="value-servicing">{{employeeGarageName}}</div>
                                 </div>
                                 <div class="servicing-model-name">
                                     <div class="label-servicing">Model Name</div>
