--- a/templates/views/profile.hbs
+++ b/templates/views/profile.hbs
@@ -32,7 +32,7 @@
                             <h2 class="heading-about-me">About Me</h2>
                         </div>
                         <div class="content-about-info">
-                            <div class="about-info">
+                            {{!-- <div class="about-info">
                                 <div class="content-about-title">
                                     <span class="title-user-name">
                                         <i class="fas fa-solid fa-user-check"></i>
@@ -41,7 +41,7 @@
                                 <div class="content-about-value">
                                     <span class="title-value-user-name" id="title-value-user-name">piyushraj2340</span>
                                 </div>
-                            </div>
+                            </div> --}}
                             <div class="about-info">
                                 <div class="content-about-title">
                                     <span class="title-email">
