--- a/templates/views/emergencyForm.hbs
+++ b/templates/views/emergencyForm.hbs
@@ -68,8 +68,7 @@
                         </div>
                         <div class="content-submit-button">
                             <div class="content-submit-btn">
-                                <button onclick="scheduleForm()" id="next-btn">Next</button>
-                                <input type="submit" value="Submit" id="submit-btn" class="submit-btn">
+                                <input type="submit" value="Submit" id="submit-btn" class="btn">
                             </div>
                         </div>
                     </form>
