--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,17 +16,17 @@
         {{>nav}}
         <header class="head">
         <div class="head-text">
-            <h1 class="head1">WELCOME TO A NEW PROFESSIONAL COMMUNITY</h1>
+            <h1 class="head1">SPREADING THE JOY OF BEST DRIVE.</h1>
             <a class="head-button" href="#">
-                <span class="head-text-link-text">Post a job</span> 
+                <span class="head-text-link-text">BE OUR EMPLOYEE</span> 
                 <span class="head-text-link-symb">></span>
             </a>
             <a class="head-button" href="#">
-                <span class="head-text-link-text">Search for a job</span> 
+                <span class="head-text-link-text">TAKE OUR SERVICE</span> 
                 <span class="head-text-link-symb">></span>
             </a>
             <a class="head-button" href="#">
-                <span class="head-text-link-text">Find a person you know</span> 
+                <span class="head-text-link-text">BOOK YOUR SERVICE</span> 
                 <span class="head-text-link-symb">></span>
             </a>
         </div>
